1. fixed "Add" button being disabled all the time in template dialog    (and other such bugs potentially due to language menu disabling) 2. fixed duplicate message when storing config remotedly 3. added explicit sender setting

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,12 @@
       Please refer to the cvs update list archives for the detailed list of
       all changes.
 
+Release 0.63 '?'
+-------------------------------------------------------------------------------
+
+23.03.01 VZ: added explicit "Sender" setting
+23.03.01 VZ: fixed bug with "Add" button being disabled in template dialog
+
 Release 0.62 'Mars' March 22, 2001
 -------------------------------------------------------------------------------
 
