1. removed some settings which don't really make sense for Win from options dlg 2. importing folders/identities into Win really works now 3. importing folders shows them in the tree 4. fixed filters dialog initial layout under Windows

--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
 Release 0.63 '?'
 -------------------------------------------------------------------------------
 
+24.03.01 VZ: retrieving remotedly stored folders/identities from Win works too
 23.03.01 VZ: added explicit "Sender" setting
 23.03.01 VZ: fixed bug with "Add" button being disabled in template dialog
 
