1. moved "thread messages" checkbox into the main dialog 2. also made this option take effect immediately 3. fixed showing "Posted to" for msgs from oneself to a NG once again 4. fixed (?) page breaks for PS printing

--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
 Release 0.63 '?'
 -------------------------------------------------------------------------------
 
+27.03.01 VZ: printing bug (page was offset and page breaks were wrong) fixed
 26.03.01 VZ: fixed search bug (wrong messages were highlighted)
 24.03.01 VZ: retrieving remotedly stored folders/identities from Win works too
 23.03.01 VZ: added explicit "Sender" setting
