--- a/doc/Manual.lyx
+++ b/doc/Manual.lyx
@@ -1308,9 +1308,9 @@ Mahogany
 
 \end_inset 
 
-)of all available mail or news folders.
+) of all available mail or news folders.
  On the right of it, it shows the currently selected folder in a folder
- view(see 
+ view (see 
 \begin_inset LatexCommand \ref{FolderView}
 
 \end_inset 
@@ -1331,7 +1331,7 @@ The folder tree shows a hierarchical view of all folders managed by
 Mahogany
 \emph default 
 , this includes both mail folders and newsgroups.
- Folders can be grouped hierarchical and inherit settings from their parent
+ Folders can be grouped hierarchically and inherit settings from their parent
  folders (e.g.
  the server host).
  Clicking the right mouse button on any tree node will pop up a menu with
