--- a/doc/README.lyx
+++ b/doc/README.lyx
@@ -95,7 +95,7 @@ Cross-platform.
  Use one mail client, no matter what system you use.
  The source and binary for Windows 95/98/NT are available on request (
 \family typewriter 
-mahogany-developers@lists.sourceforge.net
+mahogany-users@lists.sourceforge.net
 \family default 
 ).
  Mailbox file formats are the same on both platforms.
