--- a/doc/README.tex
+++ b/doc/README.tex
@@ -58,7 +58,7 @@ Quite some already, but more are still missing. What we have so far:
 \begin{itemize}
 \item Cross-platform. M compiles on a variety of Unix systems and on Microsoft Windows.
 Use one mail client, no matter what system you use. The source and binary for
-Windows 95/98/NT are available on request (\texttt{mahogany-developers@lists.sourceforge.net}).
+Windows 95/98/NT are available on request (\texttt{mahogany-users@lists.sourceforge.net}).
 Mailbox file formats are the same on both platforms.
 \item Based on the c-client library from the University of Washington, therefore full
 access to a wide range of protocols and file formats, including SMTP, MAP, POP3,
