--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,8 @@
 Release 0.63 'Saugus'
 -------------------------------------------------------------------------------
 
+17.04.01 VZ: added (configurable) limit on the size of inline graphics
+17.04.01 VZ: added possibility to show message size in bytes/kb/mb
 09.04.01 VZ: Mahogany now uses imap2000b which fixes several mail related bugs
 08.04.01 VZ: use the charset of the original message when replying/forwarding
 04.04.01 VZ: huge speed up in messages copying between IMAP folders
