1. fixed layout of installer pages 2. made password dialog bigger 3. don't remember dialog geometry if it was cancelled 4. fixed (?) 2fish crypt 5. fixed updating of number of messages after moving msgs with filters 6. added "Folder|Clear" command 7. small UI update glitch in the options dialog fixed

--- a/TODO
+++ b/TODO
@@ -8,6 +8,12 @@ $Id$
     just continue to remove bugs from this list as they are 
     fixed.
 
+************ bugs
+
+1. INBOX msg # not decremented when message is moved by filters
+2. test 2fish
+3. bug with 2ble opening?
+
 ************ optimize
 
 ************ possible cclient improvements (from reading PINE sources)
