--- a/CHANGES
+++ b/CHANGES
@@ -6,9 +6,11 @@
 Release 0.63 'Saugus'
 -------------------------------------------------------------------------------
 
+14.05.01 VZ: added "Clear folder" command
 14.05.01 NB: fixed text highlighting (middle lines were black in selection)
 13.05.01 NB: added initial UTF-8 support (converts text to current locale's
-             encoding only)
+             encoding only, requires wxWindows 2.3.x)
+12.05.01 VZ: TwoFish encryption can now be used under Windows as well
 01.05.01 VZ: optionally show the number of messages in the folder tree
 25.04.01 VZ: added "Away" (or unattended) mode support
 19.04.01 VZ: added "Close" and "Close all" folder(s) commands
