implemented opening URLs in new window for Windows, added URL popup menu

--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,8 @@
 Release 0.63 'Saugus'
 -------------------------------------------------------------------------------
 
+27.05.01 VZ: added URL popup menu
+26.05.01 NB: added possibility to open URLs in new window
 17.05.01 VZ: several bugs related to renaming the folders in the tree fixed
 14.05.01 VZ: added "Clear folder" command
 14.05.01 NB: fixed text highlighting (middle lines were black in selection)
