1. added "Next flagged" and "Select all flagged" menu commands 2. moved "Extract addresses" to "Edit" menu

--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
 Release 0.63 'Saugus'
 -------------------------------------------------------------------------------
 
+28.05.01 NB: added "Next flagged" menu command
 27.05.01 VZ: added URL popup menu
 26.05.01 NB: added possibility to open URLs in new window
 17.05.01 VZ: several bugs related to renaming the folders in the tree fixed
