--- a/CHANGES
+++ b/CHANGES
@@ -3,9 +3,10 @@
       Please refer to the cvs update list archives for the detailed list of
       all changes.
 
-Release 0.63 'Saugus'
+Release 0.63 'Saugus' June 7, 2001
 -------------------------------------------------------------------------------
 
+06.06.01 VZ: show progress dialog while extracting addresses
 05.06.01 VZ: (Unix) configure now detects Python 2.x
 28.05.01 NB: added "Next flagged" menu command
 27.05.01 VZ: added URL popup menu
