--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,9 @@
 Release 0.63 'Saugus' June 7, 2001
 -------------------------------------------------------------------------------
 
+06.06.01 NB: added support for showing folder names containing letters encoded
+             in modified UTF-7 (converts text to current locale's encoding only,
+             requires wxWindows 2.3.x)
 06.06.01 VZ: show progress dialog while extracting addresses
 05.06.01 VZ: (Unix) configure now detects Python 2.x
 28.05.01 NB: added "Next flagged" menu command
