--- a/doc/Manual.lyx
+++ b/doc/Manual.lyx
@@ -608,8 +608,8 @@ Generally we welcome help for anything.
 \latex latex 
 
 \backslash 
-htmladdnormallinkfoot{mahogany-users@lists.sourceforge.net}{mailto:mahogany-u
-sers@lists.sourceforge.net}
+htmladdnormallinkfoot{mahogany-users@lists.sourceforge.net}{mailto:mahogany-users@
+lists.sourceforge.net}
 \latex default 
 .
  If you have questions about the Mahogany License, discuss them with us
@@ -2250,7 +2250,7 @@ Migrating from another mail client
 Mahogany
 \emph default 
  supports importing the settings from a few other popular mail clients.
- The current list includes Pine, XFMail and Eudora.
+ The current list includes Netscape, Pine, XFMail and Eudora.
  Depending on the mail client only part of its settings may be imported
  but in the best case Mahogany can import the address books, the configuration
  settings, the filter rules and the list of folders to use.
@@ -3312,7 +3312,15 @@ SMTP server
 \newline 
 This is the server used for sending outgoing mail, please ask your system
  administrator if you don't know its name.
- If you don't configure this setting, you will not be able to send any e-mail!
+ This option is disabled if 
+\begin_inset Quotes eld
+\end_inset 
+
+Use local mail transfer agent
+\begin_inset Quotes erd
+\end_inset 
+
+ is checked.
 \layout Itemize
 
 
