1. fixed couple of (harmless) asserts 2. small change to the text of some menus 3. fixed "File" button in "Open folder" dialog 4. fixed asserts during reopening the folder tree after folder removal 5. fixed double creation of folders in the tree 6. somewhat reduced the list control flicker when changing status of several    messages at once (Win only)

--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
 Release 0.63 'Saugus' June 7, 2001
 -------------------------------------------------------------------------------
 
+10.06.01 VZ: fixed opening of files as folders
 06.06.01 NB: added support for showing folder names containing letters encoded
              in modified UTF-7 (converts text to current locale's encoding only,
              requires wxWindows 2.3.x)
